--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1192,6 +1192,7 @@ th {
   .button-filtros {
     display: grid;
     justify-items: center;
+    justify-content: center;
   }
 }
 @media screen and (max-width: 769px) {
