--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1177,6 +1177,7 @@ th {
     @media screen and (max-width: 769px) {
         display: grid;
         justify-items: center;
+        justify-content: center;
     }
     a{
         @media screen and (max-width: 769px) {
